# AA.jump

./: Achievments.cpp  Achievments.h  Block.cpp  Block.h  CMakeLists.txt  DisplayElement.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Hero.cpp  Hero.h  Maps.cpp  Maps.h  Observer.h  StrategyAtkLeft.h  StrategyAtkRight.h  StrategyAttack.h  StrategyDefense.h  StrategyDefenseLeft.h  StrategyDefenseRight.h  StrategyMove.h  Subject.h  Window.cpp  Window.h  achievements.txt  main.cpp
SFML-2.4.2/include/SFML/: Config.hpp  Main.hpp  OpenGL.hpp  Window.hpp
SFML-2.4.2/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
SFML-2.4.2/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glsl.inl  Glyph.hpp  Image.hpp  PrimitiveType.hpp  Rect.hpp  Rect.inl  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  View.hpp
SFML-2.4.2/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
SFML-2.4.2/include/SFML/System/: Clock.hpp  Err.hpp  Export.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NativeActivity.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  String.inl  Thread.hpp  Thread.inl  ThreadLocal.hpp  ThreadLocalPtr.hpp  ThreadLocalPtr.inl  Time.hpp  Utf.hpp  Utf.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
SFML-2.4.2/include/SFML/Window/: Context.hpp  ContextSettings.hpp  Event.hpp  Export.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Window.hpp  WindowHandle.hpp  WindowStyle.hpp
SFML-2.4.2/share/SFML/examples/X11/: X11.cpp
SFML-2.4.2/share/SFML/examples/ftp/: Ftp.cpp
SFML-2.4.2/share/SFML/examples/opengl/: OpenGL.cpp
SFML-2.4.2/share/SFML/examples/pong/: Pong.cpp
Test/: AA_.cbp  CMakeLists.txt  Makefile  RunTest  Test.cpp  TestBlock.cpp  TestEnemy.cpp  TestHero.cpp  TestMap.cpp  cmake_install.cmake
utilites/: achievements.txt
(+11 files in other folders)
